styles/base.css
:root {
  --primary-color: #19381f; /* dark-green */
  --secondary-color: #eee82c; /* yellow */
  --tertiary-color: #91cb3e; /* yellow-green */

  --text-primary-color: #ffffff; /* for dark-green */
  --text-secondary-color: #19381f; /* for yellow */
  --text-tertiary-color: #19381f; /* for yellow-green */

  --primary-margin: 2rem;
  --secondary-margin: 1rem;

  --primary-padding: 2rem;
  --secondary-padding: 1rem;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

/* google font */

p,
span,
h1,
h2,
a {
  font-family: "Bitcount Grid Single", system-ui;
  font-weight: 400;
  font-style: normal;
  font-variation-settings: "slnt" 0, "CRSV" 0.5, "ELSH" 0, "ELXP" 0;
}

header,
footer {
  background-color: var(--primary-color);
  color: var(--text-primary-color);
}

header {
  width: 100%;
  text-align: center;
}

header span {
  display: block;
  font-size: 2rem;
  padding: var(--primary-padding);
  color: var(--text-primary-color);
}

footer {
  text-align: center;
  padding: var(--secondary-padding);
}

footer p:first-child {
  font-size: 1.5rem;
}

nav {
  display: flex;
  background-color: var(--tertiary-color);
}

nav ul {
  display: flex;
  justify-content: space-around;
  width: 100%;
}

nav ul a {
  text-decoration: none;
  color: var(--text-primary-color);
}

nav li {
  list-style-type: none;
  padding: var(--secondary-padding);
}

nav li:hover {
  cursor: pointer;
  background-color: var(--secondary-color);
}

nav li:hover a {
  color: var(--text-secondary-color);
}

main {
  display: grid;
  grid-template-columns: 2fr 1fr;
  gap: var(--primary-margin);
  width: 1200px;
  margin: var(--primary-margin) auto;
}

main h1 {
  grid-column: 1 / -1;
  grid-row: 1;
  text-align: center;
  font-size: 2.5rem;
  color: var(--primary-color);
}

.card {
  border: 1px solid var(--primary-color);
  border-radius: 1rem;
}

.card h2 {
  text-align: center;
  background-color: var(--primary-color);
  color: var(--text-primary-color);
  border-radius: 1rem 1rem 0 0;
  padding: var(--secondary-padding);
}

.card p {
  padding: var(--secondary-padding);
  line-height: 1.5;
}

.card h3 {
  margin: 0 var(--primary-margin);
  padding: var(--secondary-padding);
  text-align: center;
  border-bottom: 1px solid var(--primary-color);
}

.resources-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  flex: 1;
}

.resources {
  padding: var(--secondary-padding);
  list-style-type: none;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.resources li {
  padding-top: var(--secondary-padding);
}

#profile-image {
  float: right;
  width: 200px;
  margin: var(--secondary-margin);
}

#ogden-image {
  width: 150px;
  float: left;
  margin: var(--secondary-margin);
}

.resources-card {
  display: flex;
  flex-direction: column;
  min-height: 350px;
}

.resources-card .resources-container {
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

